updating styles for button to render correctly

--- a/client/src/components/collection-item/collection-item.styles.scss
+++ b/client/src/components/collection-item/collection-item.styles.scss
@@ -15,10 +15,10 @@
   }
 
   .custom-button {
-    width: 80%;
-    opacity: 0.7;
-    position: absolute;
-    top: 255px;
+    // width: 80%;
+    // opacity: 0.7;
+    // position: absolute;
+    // top: 255px;
     display: none;
   }
 
@@ -26,7 +26,6 @@
     .image {
       opacity: 0.8;
     }
-
     .custom-button {
       opacity: 0.85;
       display: flex;
